--- a/app/task-build-config.gradle
+++ b/app/task-build-config.gradle
@@ -35,15 +35,17 @@ android {
         def LOGOUT_URL = "LOGOUT_URL"
 
         debug {
+
             /*
-            buildConfigField "String", SERVER_URL, '\"https://1.255.57.88:8080\"'
-            buildConfigField "String", LOGIN_URL, '\"https://1.255.57.88:8080/api/ompMobilLogin\"'
-            buildConfigField "String", LOGOUT_URL, '\"https://1.255.57.88:8080/api/ompMobilLogOut\"'
-             */
+            TEST2
             buildConfigField "String", SERVER_URL, '\"https://test2.bemyunicorn.io:8080\"'
             buildConfigField "String", LOGIN_URL, '\"https://test2.bemyunicorn.io:8080/api/ompMobilLogin\"'
             buildConfigField "String", LOGOUT_URL, '\"https://test2.bemyunicorn.io:8080/api/ompMobilLogOut\"'
-
+            */
+            //TEST3
+            buildConfigField "String", SERVER_URL, '\"https://test3.bemyunicorn.io\"'
+            buildConfigField "String", LOGIN_URL, '\"https://test3.bemyunicorn.io/api/ompMobilLogin\"'
+            buildConfigField "String", LOGOUT_URL, '\"https://test3.bemyunicorn.io/api/ompMobilLogOut\"'
         }
 
         release {
