--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,9 @@
             <activity android:name=".SearchActivity"
                 android:screenOrientation="portrait"/>
             <activity android:name=".OrderSearchActivity"
-                android:screenOrientation="portrait"/>
+                android:configChanges="orientation|keyboardHidden"
+                android:screenOrientation="portrait"
+                />
             <activity android:name=".Search2Activity"
                 android:screenOrientation="portrait"/>
             <activity android:name=".WebActivity"
