--- a/app/task-build-config.gradle
+++ b/app/task-build-config.gradle
@@ -38,17 +38,21 @@ android {
 
 
 //            TEST2
+            buildConfigField "String", SERVER_URL, '\"https://test2.bemyunicorn.io\"'
+            buildConfigField "String", LOGIN_URL, '\"https://test2.bemyunicorn.io/api/ompMobilLogin\"'
+            buildConfigField "String", LOGOUT_URL, '\"https://test2.bemyunicorn.io/api/ompMobilLogOut\"'
+
+            //TEST3
+//            buildConfigField "String", SERVER_URL, '\"https://test3.bemyunicorn.io\"'
+//            buildConfigField "String", LOGIN_URL, '\"https://test3.bemyunicorn.io/api/ompMobilLogin\"'
+//            buildConfigField "String", LOGOUT_URL, '\"https://test3.bemyunicorn.io/api/ompMobilLogOut\"'
+        }
+
+        release {
 //            buildConfigField "String", SERVER_URL, '\"https://test2.bemyunicorn.io\"'
 //            buildConfigField "String", LOGIN_URL, '\"https://test2.bemyunicorn.io/api/ompMobilLogin\"'
 //            buildConfigField "String", LOGOUT_URL, '\"https://test2.bemyunicorn.io/api/ompMobilLogOut\"'
 
-            //TEST3
-            buildConfigField "String", SERVER_URL, '\"https://test3.bemyunicorn.io\"'
-            buildConfigField "String", LOGIN_URL, '\"https://test3.bemyunicorn.io/api/ompMobilLogin\"'
-            buildConfigField "String", LOGOUT_URL, '\"https://test3.bemyunicorn.io/api/ompMobilLogOut\"'
-        }
-
-        release {
             buildConfigField "String", SERVER_URL, '\"https://bemyunicorn.io\"'
             buildConfigField "String", LOGIN_URL, '\"https://bemyunicorn.io/api/ompMobilLogin\"'
             buildConfigField "String", LOGOUT_URL, '\"https://bemyunicorn.io/api/ompMobilLogOut\"'
